<resources>
    <string name="app_name">CollageQuera</string>
    <string name="name">Enter your name</string>
    <string name="username">Enter your username</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="mobile">Enter your mobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="registered_mobile">Please enter your Registered Mobile no. below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>